src/objects/Second_Objects__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Second Objects</relationshipLabel>
        <relationshipName>Second_Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FirstObject__c</fullName>
        <label>FirstObject</label>
        <referenceTo>FirstObject__c</referenceTo>
        <relationshipLabel>Second Objects</relationshipLabel>
        <relationshipName>Second_Objects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_Formula__c</fullName>
        <formula>&apos;Mr  &apos; &amp;  Account_Name__r.Name  &amp; &apos; &apos; &amp;  FirstObject__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testing_data__c</fullName>
        <label>Testing data</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>picklist__c</fullName>
        <label>picklist</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>test_phone__c</fullName>
        <label>test phone</label>
        <type>Phone</type>
    </fields>
    <label>Second Objects</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Second Objects Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Second Objects</pluralLabel>
    <recordTypes>
        <fullName>test123</fullName>
        <active>true</active>
        <label>test123</label>
    </recordTypes>
    <recordTypes>
        <fullName>testing</fullName>
        <active>true</active>
        <label>testing</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>phone_not_empty</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISBLANK( test_phone__c ), true, false)</errorConditionFormula>
        <errorMessage>phone should be enter</errorMessage>
    </validationRules>
</CustomObject>